# mettle

./: .gitignore  CLAUDE.md  Cargo.toml  LIMITATIONS.md  PORTING_RULES.md  README.md  SEMANTICS_LEDGER.md  STYLE.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
baselines/: README.md  alloytools-models-count-sb0.json  alloytools-models-count-sb20.json  alloytools-models-slow-count-sb0.json  alloytools-models-verdict.json  alloytools-models-verdict.txt  portus-63-count-sb0.json  portus-63-count-sb20.json  portus-63-slow-count-sb0.json  portus-63-verdict.json
crates/als-conform/: Cargo.toml
crates/als-conform/fixtures/: bitwidth.als  overflow.als  test1.als  test2.als  test3.als
crates/als-conform/shim/: OracleShim.java  ParseOnlyShim.java  ResolveGaugeShim.java
crates/als-conform/src/: config.rs  error.rs  lib.rs  model.rs  parse.rs  scorecard.rs  shim.rs  status.rs
crates/als-conform/src/bench/: jar_side.rs  mettle_side.rs  mod.rs  render.rs  tests.rs
crates/als-conform/src/solve_gauge/: baseline.rs  count_baseline.rs  detect.rs  mod.rs  parallel.rs  refresh.rs
crates/als-conform/tests/: oracle_integration.rs  solve_gauge_integration.rs
crates/als-core/: Cargo.toml
crates/als-core/src/: bounds.rs  bounds_builder.rs  error.rs  eval.rs  freevars.rs  ir.rs  lib.rs  lower.rs  overflow_guard.rs  scope.rs  solve.rs  strings.rs
crates/als-core/src/encode/: circuit.rs  freevars.rs  int.rs  matrix.rs  mod.rs  symmetry.rs
crates/als-core/tests/: bounds.rs  bounds_corpus.rs  eq_typing_conformance.rs  eval_differential.rs  fo_skolem_conformance.rs  int_conformance.rs  lower.rs  lower_corpus.rs  sb_conformance.rs  scope.rs  scope_corpus.rs  self_check.rs  seq_conformance.rs  solve.rs  solve_corpus.rs  string_conformance.rs  univ_conformance.rs
crates/als-instance/: Cargo.toml
crates/als-instance/src/: lib.rs
crates/als-solve/: Cargo.toml
crates/als-solve/src/: lib.rs  solver.rs
crates/als-solve/tests/: conformance.rs
crates/als-sterling/: Cargo.toml
crates/als-sterling/src/: lib.rs
crates/als-syntax/: Cargo.toml
crates/als-syntax/src/: arena.rs  ast.rs  cook.rs  lexer.rs  lib.rs  parser.rs  prec.rs  print.rs  span.rs  token.rs
crates/als-syntax/src/parser/: tests.rs
crates/als-syntax/src/print/: tests.rs
crates/als-syntax/src/print/snapshots/: als_syntax__print__tests__snapshot_dump_shape.snap  als_syntax__print__tests__snapshot_precedence_and_temporal.snap  als_syntax__print__tests__snapshot_whole_module.snap
crates/als-syntax/tests/: corpus_lex.rs  corpus_parse.rs  corpus_roundtrip.rs  fuzz_mutations.rs
crates/als-types/: Cargo.toml
crates/als-types/src/: choice.rs  error.rs  file.rs  graph.rs  lib.rs  load.rs  loader.rs  path.rs  stdlib.rs  ty.rs  warning.rs  world.rs
crates/als-types/src/resolve/: expr.rs  members.rs  mod.rs  sigs.rs
crates/als-types/stdlib/util/: boolean.als  graph.als  integer.als  natural.als  ordering.als  relation.als  seqrel.als  sequence.als  sequniv.als  ternary.als  time.als
crates/als-types/tests/: corpus_load.rs  corpus_resolve.rs  module_graph.rs  resolve_probes.rs  stdlib_parse.rs  warning_probes.rs
crates/mettle/: Cargo.toml
crates/mettle/src/: diagnostics.rs  exec.rs  main.rs
crates/mettle/tests/: check.rs  exec.rs
crates/mettle/tests/fixtures/check/: good.als  parse_error.als  root_missing_open.als  root_opens_bad_sub.als  root_opens_sub.als  root_type_error.als  sub_error.als  sub_parse_error.als  warn.als
crates/mettle/tests/fixtures/exec/: commands.als  temporal.als
docs/: LESSONS.md  MIGRATION.md  README.md  ROADMAP.md  SESSION_WRAP.md  STATE.md  TASKS.md
docs/adr/: 0001-name-mettle.md  0002-conformance-oracle.md  0003-supported-subset-sequencing.md  0004-docs-and-task-system.md  0005-core-ir-type-skeleton.md  0006-licensing-posture.md  0007-rung1-lexer-parser-architecture.md  0008-rung2-resolver-architecture.md  0009-fused-resolve-pass-accept-lean.md  0010-hundred-percent-before-signoff.md  0011-rung3-translation-solving-architecture.md  0012-rung4-integers-strings-counting.md  README.md
docs/reference/: alloy4fun-error-pass.md  alloy4fun-resolve-pass.md  alloy6-grammar.md  alloy6-reference.md  alloy6-resolution.md  alloy6-translation.md  corpora.md  fuzzing.md  warning-parity.md
scripts/: bootstrap.sh  corpora.sha256  fetch-corpora.sh  watch-status.sh
