[package]
name = "als-conform"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "conform"
path = "src/bin/conform.rs"

# mt-020 differential resolve/typecheck gauge: a batch driver that runs
# mettle's own load+resolve over the alloy4fun corpus (and the 167-file
# corpus) and diffs the verdicts against the jar (ParseOnlyShim, whose
# `parseEverything_fromString` already runs the full resolveAll).
[[bin]]
name = "resolve-gauge"
path = "src/bin/resolve_gauge.rs"

# mt-037 differential solve gauge + SB-0 counting net: drives mettle's own
# solve pipeline over the corpus, diffs verdicts against the cached baselines
# (`baselines/*-verdict.json`), and — under `--count` — enumerates SB-0 model
# counts against the pinned jar for goals with no skolemizable/ordered-abstract
# count divergence (ADR-0002, LIMITATIONS).
[[bin]]
name = "solve-gauge"
path = "src/bin/solve_gauge.rs"

[dependencies]
# als-core: the solve-gauge drives mettle's own solve pipeline
# (compute_universe + compute_bounds + lower_command + solve_goal + enumerate)
# and walks the lowered IR to classify SB-0 count-divergence families.
als-core = { path = "../als-core" }
# als-types / als-syntax: the resolve-gauge bin drives mettle's own
# load+resolve pipeline (ModuleGraph::load_with_source + als_types::resolve)
# to produce the mettle-side ACCEPT/REJECT verdict it diffs against the jar;
# the solve-gauge reuses the resolved world for its counting-eligibility rules.
als-types = { path = "../als-types" }
als-syntax = { path = "../als-syntax" }
# thiserror: typed per-crate error enum (STYLE E1) for the harness's own
# infra failures (jar missing, javac failure, process I/O) -- boilerplate
# Display/Error impls for a growing enum, nothing std doesn't already do
# by hand, just less of it.
thiserror = "1"
# serde + serde_json: the oracle shim's stdout is a JSON Lines protocol and
# the Scorecard artifact is JSON; serde_json is the standard decoder/encoder
# for both directions and keeps us from hand-rolling a JSON parser to
# consume an external (Java-side) protocol.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
