[package]
name = "als-sterling"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# als-types: the Sterling protocol reports sig/type information alongside instances.
als-types = { path = "../als-types" }
# als-instance: Sterling serves decoded instances over the JSON data-provider protocol.
als-instance = { path = "../als-instance" }
